# microservices_products

./: .env.example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
.configure/: flake8
.github/workflows/: main.yml  test.yml
src/: config.py  main.py
src/alembic/: env.py
src/alembic/versions/: 3364ea5f5a5b_.py  3d3faa8b2750_.py  565231082c05_creating_database.py  c2c4bfe08ee3_.py  df4db0a3a8e5_creating_database.py  f99d8f06f041_creating_database.py
src/api/: products.py
src/models/: product.py
src/schemas/: product.py
src/services/: database.py  products.py
src/test/: conftest.py  test_product.py
